Implemented Yuanmings suggestions (among other)

--- a/tex/cover-letter/cover_letter.tex
+++ b/tex/cover-letter/cover_letter.tex
@@ -10,12 +10,14 @@
 Washington, DC 20036}
 \opening{Dear Sir or Madam:}
 
-I am pleased to submit this manuscript entitled "Modeling Variation in Indoor Air Contaminant Concentration \& Impact of Preferential Contaminant Pathways on Vapor Intrusion" for review and possible publication in Environmental Science \& Technology.
+I am pleased to submit this manuscript entitled "Temporal Variations In Vapor Intrusion-Induced Indoor Air Contaminant Concentrations" for review and possible publication in Environmental Science \& Technology.
 This is original work, and has not been previously submitted to any other journal or conference proceedings.
 
-Using numerical models and published field data from two vapor intrusion (VI) sites, we explore the causes of the temporal variation in indoor air contaminant concentrations in VI impacted houses, a poorly understood phenomena, and especially the role of preferential contaminant pathways in this.
+Using numerical models and published field data from three vapor intrusion (VI) sites, we explore the causes of the temporal variation in indoor air contaminant concentrations in VI impacted houses, a poorly understood phenomena.
+We especially investigate the role of preferential contaminant pathways have in VI, and how air exchange rates contribute to variability in indoor air contaminant concentration.
 
 We found under which conditions one may expect to observe significant changes in indoor air concentrations, and when one should be especially be concerned with preferential pathways.
+Furthermore, we found how changes in indoor outdoor pressure difference and air exchange rate independently affect temporal variability in VI under different conditions. 
 These finding help understand and explain the temporal variation that has been observed at many VI sites, and giving practical guidance for assessment of these sites, something that we expect will be of great interest to your readership.
 
 All of the work presented is either created by us or properly referenced, including the TOC art which adhere to the TOC art policy and is the prescribed size of 240 by 135 points.
