--- a/tex/supporting-information/esthag_supporting.tex
+++ b/tex/supporting-information/esthag_supporting.tex
@@ -12,10 +12,10 @@
 % authors
 \author{Jonathan G. V. Ström}
 \affiliation[Brown University]{Brown University, School of Engineering, Providence, RI, USA}
+\author{Yuanming Guo}
+\affiliation[Arizona State University]{Arizona State University, School of Sustainable Engineering and the Building Environment, Tempe, AZ, USA}
 \author{Yijun Yao}
 \affiliation[Brown University]{Brown University, School of Engineering, Providence, RI, USA}
-%\author{Yuanming Guo}
-%\affiliation[Arizona State University]{Arizona State University}
 \author{Eric M. Suuberg}
 \email{eric_suuberg@brown.edu}
 \affiliation[Brown University]{Brown University, School of Engineering, Providence, RI, USA}
