--- a/tex/supporting-information/esthag_supporting.tex
+++ b/tex/supporting-information/esthag_supporting.tex
@@ -6,7 +6,7 @@
 \usepackage{booktabs}
 \usepackage{subcaption}
 \usepackage{array,multirow,graphicx}
-\graphicspath{{../../figures/2d_kde/}}
+\graphicspath{{./../figures/}}
 % macros
 
 % authors
